# key-face-frame

./: .env.example  .gitignore  AGENTS.md  FAQ.md  GIT_WORKFLOW.md  GUMROAD_GUIDE.md  MVP_v1.0_SUMMARY.md  README-COMMERCIAL.md  README.md  WINDOWS_INSTALL.md  dump.rdb  fix_opencv_windows.bat  install_windows.bat  license.key.example  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup_pytorch.py  start.bat  start.sh  stop.bat  stop.sh
backend/: __init__.py  main.py
backend/api/: __init__.py  dependencies.py
backend/api/routes/: __init__.py  video.py
backend/api/schemas/: video.py
backend/core/: __init__.py  config.py  exceptions.py  license.py
backend/core/agents/: __init__.py  detection_agent.py  keyframe_agent.py  lead_agent.py
backend/models/: __init__.py  video.py
backend/workers/: __init__.py  tasks.py
docs/: README.md  V2.1_IMPLEMENTATION_PLAN.md
docs/archive/: API_IMPLEMENTATION_SUMMARY.md  API_TESTING_GUIDE.md  BEST_PRACTICES.md  DELIVERABLES.md  DETECTION_AGENT_IMPLEMENTATION.md  EXECUTION_GUIDE.md  IMPLEMENTATION_HIGHLIGHTS.md  PROJECT_KICKOFF.md  QA_DELIVERABLES_SUMMARY.md  QUALITY_METRICS.md  QUICK_START.md  REVIEW_TESTING.md  SETUP.md  TESTING_GUIDE.md  TEST_EXECUTION_PLAN.md
frontend/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  video.ts
frontend/src/hooks/: useProcessingStatus.ts
frontend/src/stores/: videoStore.ts
frontend/src/utils/: constants.ts  formatters.ts
tests/: __init__.py  conftest.py  test_api.sh
tests/e2e/: __init__.py  test_complete_workflow.py
tests/integration/: __init__.py  test_detection_integration.py  test_full_pipeline.py  test_keyframe_integration.py  test_pipeline.py
tests/unit/: __init__.py
tests/unit/agents/: __init__.py  test_detection_agent.py  test_keyframe_agent.py  test_lead_agent.py
tests/unit/api/: __init__.py  test_video_routes.py
tests/unit/workers/: __init__.py  test_tasks.py
(+7 files in other folders)
